# vasculitis2022-conference

./: .buildinfo  .gitignore  CONTRIBUTING.md  LICENSE  README.md  content.html  genindex.html  index.html  intro.html  kd_tokyo_air_sources.html  markdown.html  notebooks.html  objects.inv  poster.html  pyproject.toml  requirements.txt  search.html  searchindex.js  sitemap.xml  summary.html
.github/workflows/: deploy.yml
_sources/: kd_tokyo_air_sources.ipynb  summary.md
_static/: custom.css
data/kawasaki_disease/: kd_min_max_dates.csv
vasculitis_2022_kd_winds/: _config.yml  _toc.yml  kd_tokyo_air_sources.ipynb  poster.md  references.bib  summary.md
vasculitis_2022_kd_winds/_static/: custom.css
vasculitis_2022_kd_winds/src/: utils.py
