[tool.poetry]
name = "vasculitis2022-conference"
version = "0.1.0"
description = ""
authors = ["Alejandro Fontal <alejandrofontal92@gmail.com>"]
license = "BSD License"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
plotnine = "^0.8.0"
numpy = "^1.22.3"
PySPLIT = "^0.3.6"
geopandas = "^0.10.2"
basemap = "^1.3.2"
Cartopy = "^0.20.2"
pygeos = "^0.12.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
